[gd_scene load_steps=3 format=3 uid="uid://c1wf1r4xp70ul"]

[ext_resource type="Script" path="res://scenes/house/stew.gd" id="1_dk2fg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ul1l"]
size = Vector2(227.001, 355.499)

[node name="Stew" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_dk2fg")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("RectangleShape2D_8ul1l")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
